[project]
name = "cycleguard"
version = "0.1.0"
description = "CycleGuard portfolio engine"
requires-python = ">=3.10"

dependencies = [
    "pyyaml",
    "pandas",
    "pytest"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]